# CommonProject

./: .gitignore  README.md
Executable/: Save.json
Source/: CMakeLists.txt
Source/CUDA/: CMakeLists.txt  Emulate.cu  Emulate.h  Test.cu  Test.h  Wrapper.cu  Wrapper.h  WrapperPrototype.cu  WrapperPrototypeV3.cu  WrapperPrototypeV3.h  WrapperV0x1.cu  WrapperV0x1.h  WrapperX0.cu  WrapperX0.h
Source/CUDA/Source/: Classes.h  Emulate.cpp  Emulate.cu  Emulate.h  Wrapper.cpp  Wrapper.cu  Wrapper.h  WrapperX0.cpp  WrapperX0.cu  WrapperX1.cpp  WrapperX1.cu  WrapperX1.h
Source/Game/: CMakeLists.txt
Source/Game/Source/: Game.cpp  MainGame.cpp  MainGame.h
Source/Game/Source/MySystem/: MySystem.cpp  MySystem.h
Source/Game/Source/System/: System.cpp  System.h
Source/Game/Source/SystemMy/: SaveManager.cpp  SaveManager.h  SystemMy.cpp  SystemMy.h
Source/Game/Source/TouchGame/: TouchGame.cpp  TouchGame.h
Source/Game/Source/Windows/: Console.cpp  EditMap.cpp  EditMap.h
Source/Resources/Files/: Setting.json
Source/Resources/Files/Maps/: Menu.json  Office.json  Room_00.json  Room_01.json  Room_02.json  Table.json
Source/Resources/Files/Models/: Models.json
Source/Resources/Files/Shaders/: Light.frag
Source/Resources/Files/System/: Setting.json  Systems.json
Source/Resources/Files/TouchGame/: Setting.json
Source/Resources/Source/: Box_01.blend  Box_01.blend1  Cylinder.blend  Cylinder.blend1  Map_2560.blend  Plane_100.blend  Plane_100.blend1  Terrain.blend  Terrain.blend1  Vorota.blend
Source/Resources/Source/Menu/: Box_256.blend  Button.blend  Button.blend1
(+161 files in other folders)
